Fix disallowed horizontal scrolling in less than 500px devices

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ body {
     max-width: 100vw;
 }
 
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100%;
+}
+
 hr {
     margin: 0;
     border: none;
@@ -516,6 +523,7 @@ footer>* {
 }
 
 @media screen and (max-width:510px) {
+
     .navbar-p {
         width: 55%;
     }
